--- a/appointmentSystem/grails-app/assets/stylesheets/main.css
+++ b/appointmentSystem/grails-app/assets/stylesheets/main.css
@@ -33,8 +33,8 @@ html * {
 }
 
 body {
-    background-color: #F5F5F5;
-    color: #333333;
+    background-color: #62b8c7;
+    color: #000000;
     overflow-x: hidden; /* prevents box-shadow causing a horizontal scrollbar in firefox when viewport < 960px wide */
     -moz-box-shadow: 0 0 0.3em #424649;
     -webkit-box-shadow: 0 0 0.3em #424649;
@@ -70,8 +70,7 @@ img {
     margin: 1em;
 }
 
-.content {
-}
+
 
 .content h1 {
     border-bottom: 1px solid #CCCCCC;
@@ -218,7 +217,7 @@ fieldset,
 
 .fieldcontain label,
 .fieldcontain .property-label {
-    color: #666666;
+    color: #020101;
     text-align: right;
     width: 25%;
 }
@@ -524,7 +523,7 @@ th:hover, tr:hover {
 .buttons a {
     background-color: transparent;
     border: 0;
-    color: #666666;
+    color: #070505;
     cursor: pointer;
     display: inline-block;
     margin: 0 0.25em 0;
@@ -578,15 +577,3 @@ a.skip {
     left: -9999px;
 }
 
-.grails-logo-container {
-    background: #7c7c7c no-repeat 50% 30%;
-    margin-bottom: 20px;
-    color: white;
-    height:300px;
-    text-align:center;
-}
-
-img.grails-logo {
-    height:340px;
-    margin-top:-10px;
-}
