implemented the search functionality for doctors and change background colour for the search button to advSearch.gsp

--- a/appointmentSystem/grails-app/assets/stylesheets/current.css
+++ b/appointmentSystem/grails-app/assets/stylesheets/current.css
@@ -4,6 +4,8 @@
 
 .third{background-color:#bf68c2}
 
+.fourth{background-color: #c3cc6f}
+
 .h3{color: black, font-family Arial}
 
 .p{font-family:Arial, font-size 20px}
