--- a/appointmentSystem/grails-app/assets/stylesheets/home.css
+++ b/appointmentSystem/grails-app/assets/stylesheets/home.css
@@ -1,10 +1,12 @@
-.first{background-color:#d8a20f}
+.first{background-color:#946c00}
 
 .second{background-color:#257e6b}
 
 .third{background-color:#15788a}
 
 .fourth{background-color:#d53606}
+
+.fifth{background-color:#6b6a72}
 
 .h3{color: black, font-family Arial}
 
