changed doctor variables doctor.groovy

--- a/appointmentSystem/grails-app/assets/stylesheets/current.css
+++ b/appointmentSystem/grails-app/assets/stylesheets/current.css
@@ -1,10 +1,10 @@
-.first{background-color:#83ad82}
+.first{background-color:#946c00}
 
-.second{background-color:#6652d4}
+.second{background-color:#257e6b}
 
-.third{background-color:#bf68c2}
+.third{background-color:#15788a}
 
-.fourth{background-color: #c3cc6f}
+.fourth{background-color: #d53606}
 
 .h3{color: black, font-family Arial}
 
